# garmin_data_analyze

./: .gitignore  AGENT.md  CLAUDE.md  DATABASE_ACCESS.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA_ZH.md  README.md  README_ZH.md  check_data.py  pyproject.toml  requirements.txt  sync_garmin.sh
.claude/commands/analyze/: run.md  status.md
.claude/commands/pre-commit/: check.md
.claude/skills/agent-dev-agent/: SKILL.md
.claude/skills/git-commit/: SKILL.md
analysis/: garmin_utils.py  sleep_analysis.ipynb  sleep_causal_investigation.ipynb  sleep_deep_analysis.ipynb
analysis/auto_analyst/: __init__.py  agent.py  executor.py  orchestrator.py  prompts.py  run.py  session.py  tree.py
analysis/auto_analyst/outputs/20260312_123341/: node_0_script.py  node_1_script.py  node_2_script.py  node_3_script.py  node_4_script.py  node_5_script.py  node_6_script.py  node_7_script.py  node_8_script.py  node_9_script.py  story.md  tree.json  tree.md
analysis/auto_analyst/outputs/20260312_124001/: node_0_script.py  node_1_script.py  node_2_script.py  node_3_script.py  tree.md  (+8 more)
analysis/customized/: data_preproccess_customizers.py  sleep_feature_builder.py
openspec/changes/filter-nighttime-activities/: design.md  proposal.md  tasks.md
openspec/changes/sleep-causal-investigation/: design.md  proposal.md  tasks.md
openspec/changes/sleep-deep-analysis/: proposal.md  tasks.md
openspec/specs/analysis-utils/: spec.md
openspec/specs/garmin-config/: spec.md
openspec/specs/garmin-data-schema/: spec.md
openspec/specs/sleep-analysis/: spec.md
tests/: test_sleep_feature_builder.py
(+60 files in other folders)
