[project]
name = "garmin-data-analyze"
version = "0.1.0"
description = "Personal health data analysis system based on GarminDB"
requires-python = ">=3.12,<3.14"
dependencies = [
    "garmindb>=3.6.7",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pingouin>=0.5",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "nbqa>=1.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade, B = bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg
    "UP007",  # X | Y union syntax (keep Optional for readability)
]
# Data-science notebooks often use star imports from numpy/pandas
per-file-ignores = { "*.ipynb" = ["F401", "F811", "E402"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
